public/css/style.css
:root {
    --primary: #fff3d7;
    --secondary: #db4546;
    --tertiary: #b02425;
    --white: white;
    --dark: #38302e;
  }
  
  * {
    box-sizing: border-box;
  }
  
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    margin: 0;
    font-weight: 700;
    color: var(--secondary);
    line-height: 1.25;
  }
  
  h2 a {
    color: var(--tertiary);
  }

  h2 {
    color: var(--tertiary);
    text-decoration: none;
    font-size: 30px;
  }
  
  a {
    text-decoration: none;
    color: var(--tertiary)
  }
  a:hover {
    text-decoration: underline;
  }
  
  p {
    font-size: 1.2rem;
  }
  
  input {
      width: 100%;
      border: 1px solid #ccc;
      background: var(--white);
      margin: 5px;
      padding: 10px;
  }
  
  body {
    margin: 0px;
    background-color: var(--primary);
    padding: 0;
    font-family: 'Montserrat', sans-serif;
    color: var(--secondary);
    line-height: 1.5;
    font-size: 14px; 
  }

  header {
    background-color:white;
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 70px;
    width:100%;
  }

  .content {
    display: flex;  
    text-align: center;
    width:100%;
    padding:20px;
  }
  
  main {
    display: flex;
    flex-wrap: wrap;
  }

  .center {
      text-align: center;
  }

  .pad {
      padding: 40px;
  }
  .homehead {
      font-size: 40px;
  }

  .secondary {
      color: var(--secondary);
      font-weight: 600;
  }
  .tertiary {
      color: black;
      font-weight: 600;
  }

  .bgblue {
      background-color: #a9e9de;
  }
  .bgblue h2 {
    color: var(--tertiary);
    text-decoration: none;
    font-weight: normal;
    font-size: 30px;
    line-height: 1.5;
  }

  .home-head-image {
    width:100%;
    margin-bottom:-6px;
    padding:0;
    min-height:100%;
    border-right: solid 10px var(--secondary);
}

/*NAV*/
.navbar {
    background-color: var(--secondary);
    font-size: 20px;
    color: var(--primary); 
    text-align: center;
    min-height:100%;
    width: 200px;
    position: fixed;
    height: 100%;
    overflow: auto;
  }
  
  .navbody a {
    color: var(--primary);
    padding: 16px;
    display: flex;
    justify-content: center;
    text-decoration: none;

  }
   
  .navbody a.active {
    background-color: var(--tertiary);
  }
  
  .navbody a:hover {
    color: white;
    text-decoration: underline;
  }
  
  main {
    margin-left: 200px;
  }
  
  @media screen and (max-width: 700px) {
    .navbar {
      width: 100%;
      height: auto;
      position: relative;
    }
    .navbody a {
        font-size: 16px;
        display: inline ;
    }
    main {margin-left: 0;}
  }
  
  @media screen and (max-width: 400px) {
    .navbody a {
      text-align: center;
    }
  }
      
      .navheader {
        background-color: var(--tertiary);
        font-size: 20px;
        color: var(--primary); 
        display: flex;
        justify-content: center;
        align-items: center;
        min-height: 70px;
        width:100%;
      }
      .navheader a {
        color: var(--primary); 
      }
      .navheader a:hover {
        color: white; 
      }

/*FOOTER*/

  footer {
    position: fixed;
    display: flex;
    justify-content: right;
    align-items: center;
    height: 40px;
    right: 0;
    bottom: 0;
    left: 0;
    padding-right:10px;
    text-align: right;
    background-color: black;
  }

  /*CARDS*/
  .card-volunteer {
    color: var(--primary);
    background-color: var(--tertiary);
    padding: 20px;
    width: 100%;
    text-align: left;
  }

  .card-nfp {
    display: flex;
    color: var(--primary);
    background-color: var(--tertiary);
    padding: 20px;
    width: 100%;
    text-align: center;
  }
  /*BUTTONS*/
  .btn-reachout {
    font-size: 1.6rem;
    text-decoration: none;
    padding: 8px 6px;
    width: 100%;
    display: block;
    margin: 5px 0;
    color: var(--tertiary);
    background-color: var(--primary);
    box-shadow: none;
    transform: translate(-1px, -1px);
  }
  
  .btn-reachout:hover {
    color: var(--primary);
    background-color: var(--white);
    transform: translate(0, 0);
    box-shadow: 2px 2px darkgray;
  }
  
  .btn-primary {
    text-decoration: none;
    padding: 6px 4px;
    color: var(--secondary);
    background-color: var(--white);
    box-shadow: none;
    transform: translate(-1px, -1px);
  }

  .btn-primary:hover{
    transform: translate(0, 0);
    box-shadow: 2px 2px darkgray;
  }
  
  /* FORM -----------------IN PROGRESS */
  .form-label,
  .form-input,
  .form-textarea {
    display: block;
  }
  
  .form-label {
    font-size: 1.1rem;
    margin: 0 0 0 5px;
  }
  
  .form-input {
    width: 100%;
    padding: 1%;
    margin: 5px 0;
    font-size: 1.2rem;
    border: 2px solid var(--light-dark);
  }
  
  /* FLEX CONTENT */
  .flex-row {
    display: flex;
    flex-wrap: wrap;
  }
  
  .flex-column {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
  }
  
  .justify-space-between {
    justify-content: space-between;
  }
  
  .justify-space-around {
    justify-content: space-around;
  }
  
  .justify-flex-start {
    justify-content: flex-start;
  }
  
  .justify-flex-end {
    justify-content: flex-end;
  }
  
  .justify-center {
    justify-content: center;
  }
  
  .align-stretch {
    align-items: stretch;
  }
  
  .align-end {
    align-items: flex-end;
  }
  
  .align-center {
    align-items: center;
  }
  
  .col-auto {
    flex-grow: 1;
  }
  
  .col-1 {
    flex: 0 0 calc(100% * 1 / 12 - 2%);
  }
  
  .col-2 {
    flex: 0 0 calc(100% * 2 / 12 - 2%);
  }
  
  .col-3 {
    flex: 0 0 calc(100% * 3 / 12 - 2%);
  }
  
  .col-4 {
    flex: 0 0 calc(100% * 4 / 12 - 2%);
  }
  
  .col-5 {
    flex: 0 0 calc(100% * 5 / 12 - 2%);
  }
  
  .col-6 {
    flex: 0 0 calc(100% * 6 / 12 - 2%);
  }
  
  .col-7 {
    flex: 0 0 calc(100% * 7 / 12 - 2%);
  }
  
  .col-8 {
    flex: 0 0 calc(100% * 8 / 12 - 2%);
  }
  
  .col-9 {
    flex: 0 0 calc(100% * 9 / 12 - 2%);
  }
  
  .col-10 {
    flex: 0 0 calc(100% * 10 / 12 - 2%);
  }
  
  .col-11 {
    flex: 0 0 calc(100% * 11 / 12 - 2%);
  }
  
  .col-12 {
    flex: 0 0 100%;
  }
  
  @media screen and (max-width: 700px) {
    .col-1 {
        flex: 0 0 calc(100% * 6 / 12 - 2%);
      }
      
      .col-2 {
        flex: 0 0 calc(100% * 6 / 12 - 2%);
      }
      
      .col-3 {
        flex: 0 0 100%;      
    }
      
      .col-4 {
        flex: 0 0 100%;      
    }
      
      .col-5 {
        flex: 0 0 100%;      
    }
      
      .col-6 {
        flex: 0 0 100%;
    }
      
      .col-7 {
        flex: 0 0 100%;      
    }
      
      .col-8 {
        flex: 0 0 100%;      
    }
      
      .col-9 {
        flex: 0 0 100%;      
    }
      
      .col-10 {
        flex: 0 0 100%;
    }
      
      .col-11 {
        flex: 0 0 100%;
    }
      
      .col-12 {
        flex: 0 0 100%;
    }
    }    

